[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Enemigos/spr_enemigo_prueba.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossControl.gd" type="Script" id=2]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoStart.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack2Exit.gd" type="Script" id=5]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoLineaRecta.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack2Setup.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack2.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack1.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack3.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoAttack3Setup.gd" type="Script" id=11]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoSpreadDisparador.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.9139, 35.9976 )

[node name="Nivel1Boss" type="Area2D"]
script = ExtResource( 2 )
powerUp = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Start" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Attack1" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
proyectil = ExtResource( 6 )
cadenciaDisparo = Vector2( 0.5, 0.8 )

[node name="Attack2Setup" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attack2" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Attack2Exit" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Attack3Setup" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Attack3" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
ataque = ExtResource( 12 )
